# Quizler

./: .gitignore  Build.Dockerfile  Dockerfile  LICENSE.md  README.md  build.nu  captain-definition  cspell.json  docker-compose.yml  package.json  render.yaml
.github/workflows/: build-release.yml  build.yml  publish-docker-hub.yml  publish-ghcr.yml  release.yml
backend/: .env  .gitignore  Cargo.toml
backend-v2/: .gitignore  Cargo.toml
backend-v2/public/assets/: index-004f90fa.css  index-aa718ec1.js
backend-v2/src/: game.rs  games.rs  http.rs  main.rs  msg.rs  session.rs  types.rs
backend/public/: index.html
backend/public/assets/: index-04d47b66.css  index-092ee09c.js  index-25ade738.css  index-3fba9254.js  index-44f9121c.css  index-4770eeaa.css  index-5aa371aa.js  index-5c9781b7.css  index-63d020fb.css  index-829751ac.js  index-832ad8ac.css  index-8a97c133.js  index-98fad9b6.css  index-9b4aa2a6.js  index-9d324e1e.js  index-cd87af7e.js  index-f97a5dd5.js
backend/src/: env.rs  error.rs  game.rs  games.rs  http.rs  main.rs  msg.rs  session.rs  types.rs
backend/src/routes/: mod.rs
containers/: Build.Dockerfile  prebuilt.alpine.Dockerfile  prebuilt.debian.Dockerfile
frontend/: .eslintrc.cjs  .prettierrc  eslint.config.mjs  index.html  move.mjs  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  global.d.ts  main.ts  vite-env.d.ts
frontend/src/assets/: app.scss  scheme.scss  schemeDark.scss  schemeLight.scss
frontend/src/lib/: Connect.svelte  Create.svelte  CreateQuestion.svelte  Game.svelte  ImageStorage.svelte  Join.svelte  QuestionEditor.svelte  QuestionList.svelte  QuestionView.svelte  constants.ts  defaults.ts  file.ts  format.ts  game.ts  imageStore.ts  router.ts  state.ts  utils.test.ts  utils.ts
frontend/src/lib/api/: actions.ts  http.ts  models.ts  socket.ts
frontend/src/lib/assets/: app.scss  scheme.scss
frontend/src/lib/components/: AnsweredView.svelte  Checkbox.svelte  FloatingLoader.svelte  FloatingModal.svelte  GlobalDialog.svelte  ImageStorage.svelte  LobbyView.svelte  QuestionEditor.svelte  QuestionList.svelte  QuestionListItem.svelte  QuestionView.svelte  RadioButton.svelte  Router.svelte  ScoreTweened.svelte  ScoreView.svelte  Spinner.svelte  StartingView.svelte  TimeInput.svelte  TweenedValue.svelte
frontend/src/lib/components/editor/: Answers.svelte  EditorAnswers.svelte  ImageEditor.svelte  ImageSettings.svelte  QuPreviewImage.svelte  QuestionEditor.svelte  QuestionList.svelte  QuestionListItem.svelte  QuestionSettings.svelte  QuestionTypeSelect.svelte  Settings.svelte
frontend/src/lib/components/game/: AnsweredView.svelte  AwaitReadyView.svelte  FinishedView.svelte  LobbyScoreView.svelte  LobbyView.svelte  QuestionView.svelte  ScoreView.svelte  StartingView.svelte
frontend/src/lib/components/icons/: Add.svelte  ArrowDown.svelte  ArrowUp.svelte  Back.svelte  Cog.svelte  Create.svelte  Crown.svelte  Delete.svelte  Edit.svelte  Export.svelte  GitHub.svelte  Image.svelte  Import.svelte  Logo.svelte  Play.svelte  Shuffle.svelte  Swap.svelte
frontend/src/lib/context/: socket.ts  state.ts
frontend/src/lib/data/: answeredMessages.json  correctMessages.json  incorrectMessages.json  partialMessages.json
frontend/src/lib/image/: ImageStorage.svelte  imageStore.ts
frontend/src/lib/pages/: Connect.svelte  Create.svelte  Game.svelte  Home.svelte  Join.svelte  Loading.svelte  QuestionEditor.svelte
frontend/src/lib/pages/game/: AnsweredView.svelte  FinishedView.svelte  LobbyView.svelte  QuestionStarting.svelte  QuestionView.svelte  ScoreView.svelte  Starting.svelte  Waiting.svelte
frontend/src/lib/socket/: actions.ts  index.ts  models.ts
frontend/src/lib/stores/: createStore.ts  dialogStore.ts  imageStore.ts  socket.svelte.ts  state.svelte.ts  state.ts
frontend/src/lib/utils/: format.ts  messages.ts  types.ts  utils.test.ts  utils.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/create/: +page.svelte
