[package]
name = "quizler"
version = "0.1.0-alpha"
edition = "2021"
description = "Offline quiz game"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/Quizler-v2"
readme = "../README.md"
keywords = ["quizler", "game"]

[dependencies]
# Actix async framework
actix = "0.13"

# Actix Web framework
actix-web = "4"

# Actix WebSocket actors
actix-web-actors = "4"

# Multipart form data
actix-multipart = "0.6"

# CORS 
actix-cors = "0.6.4"

# Mimetypes
mime = "0.3"

# Logging
log = "0.4"
env_logger = "0.10"

# Loading environment variables
dotenvy = "0.15"

# Utilities for working with futures
futures-util = "0.3"

# Cheaply clonable byte types
bytes = "1.4"

# Serialization and JSON
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

# Random number generation
rand_core = "0.6"

# Public assets embedding
embeddy = "0.1.1"

# Inappropriate / profanity filtering
rustrict = "0.7.6"

[dependencies.uuid]
version = "1.3.2"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]


[profile.release]
strip = true
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
# Optionally optimize for binary size:
# opt-level = "z"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
]
