[package]
name = "quizler"
version = "0.1.2"
edition = "2024"
description = "Offline quiz game"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/Quizler"
readme = "../README.md"
keywords = ["quizler", "game"]

[dependencies]
axum = { version = "0.8.8", features = ["ws", "multipart"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11.9"

# Loading environment variables
dotenvy = "0.15"

# Utilities for working with futures
futures-util = "0.3"

# Cheaply clone-able byte types
bytes = "1.4"

# Serialization and JSON
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

# Random number generation
rand = "0.10.0"

# Public assets embedding
embeddy = "0.1.1"

# Inappropriate / profanity filtering
rustrict = "0.7.7"
thiserror = "2"

uuid = { version = "1.22.0", features = ["v4", "fast-rng", "serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
# Optionally optimize for binary size:
# opt-level = "z"
